'登录信息获取'

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8887
+
+github.client.id=ab9f62c765af2687f147
+github.client.secret=1907f29cf41d7a69c5089d4b6ab66acc1bffa53e
+github.redirect.uri=http://localhost:8887/callback
