--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <name>community</name>
     <description>community</description>
 
+
     <properties>
         <java.version>1.8</java.version>
     </properties>
@@ -32,6 +33,17 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.14.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.61</version>
+        </dependency>
+
     </dependencies>
 
     <build>
