--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ server.port=8887
 github.client.id=ab9f62c765af2687f147
 github.client.secret=1907f29cf41d7a69c5089d4b6ab66acc1bffa53e
 github.redirect.uri=http://localhost:8887/callback
+
+spring.datasource.url=jdbc:mysql://localhost:3306/community
+spring.datasource.username=root
+spring.datasource.password=svse
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
