--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
 server.port=8887
 
+
 github.client.id=ab9f62c765af2687f147
 github.client.secret=1907f29cf41d7a69c5089d4b6ab66acc1bffa53e
 github.redirect.uri=http://localhost:8887/callback
 
+#数据库信息
 spring.datasource.url=jdbc:mysql://localhost:3306/community
 spring.datasource.username=root
 spring.datasource.password=svse
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+#-转驼峰数据库属性转对象
+mybatis.configuration.map-underscore-to-camel-case=true
